--- a/RecipeShare/RecipeShare.csproj
+++ b/RecipeShare/RecipeShare.csproj
@@ -178,6 +178,18 @@
     <Compile Include="Migrations\201505070330552_delete test.Designer.cs">
       <DependentUpon>201505070330552_delete test.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201505071745294_RecipeCategory.cs" />
+    <Compile Include="Migrations\201505071745294_RecipeCategory.Designer.cs">
+      <DependentUpon>201505071745294_RecipeCategory.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201505071851041_LotsOStuff.cs" />
+    <Compile Include="Migrations\201505071851041_LotsOStuff.Designer.cs">
+      <DependentUpon>201505071851041_LotsOStuff.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201505071853268_LotsOStuff2.cs" />
+    <Compile Include="Migrations\201505071853268_LotsOStuff2.Designer.cs">
+      <DependentUpon>201505071853268_LotsOStuff2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\AspNetRole.cs" />
@@ -185,8 +197,10 @@
     <Compile Include="Models\AspNetUserClaim.cs" />
     <Compile Include="Models\AspNetUserLogin.cs" />
     <Compile Include="Models\C__MigrationHistory.cs" />
+    <Compile Include="Models\FoodModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\RecipeModel.cs" />
     <Compile Include="Models\RecipeShare.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -267,6 +281,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201505070330552_delete test.resx">
       <DependentUpon>201505070330552_delete test.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201505071745294_RecipeCategory.resx">
+      <DependentUpon>201505071745294_RecipeCategory.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201505071851041_LotsOStuff.resx">
+      <DependentUpon>201505071851041_LotsOStuff.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201505071853268_LotsOStuff2.resx">
+      <DependentUpon>201505071853268_LotsOStuff2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
