--- a/RecipeShare/RecipeShare.csproj
+++ b/RecipeShare/RecipeShare.csproj
@@ -202,6 +202,10 @@
     <Compile Include="Migrations\201505080335597_fix db for now.Designer.cs">
       <DependentUpon>201505080335597_fix db for now.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201505080351449_add recipegroup relationship.cs" />
+    <Compile Include="Migrations\201505080351449_add recipegroup relationship.Designer.cs">
+      <DependentUpon>201505080351449_add recipegroup relationship.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\AspNetRole.cs" />
@@ -312,6 +316,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201505080335597_fix db for now.resx">
       <DependentUpon>201505080335597_fix db for now.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201505080351449_add recipegroup relationship.resx">
+      <DependentUpon>201505080351449_add recipegroup relationship.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
