begin logging, add recipiegrouprecipies

--- a/RecipeShare/Web.config
+++ b/RecipeShare/Web.config
@@ -7,8 +7,18 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+	<section name="ErrorHandling" type="System.Configuration.DictionarySectionHandler"/>
   </configSections>
+
+
+	<ErrorHandling>
+		<add key="EnableLogging" value="true"/>
+		<add key="ErrorLogFilesDir" value="Logs_Error"/>
+		<add key="AppLogFilesDir" value="Logs_App"/>
+	</ErrorHandling>
+	
   <connectionStrings>
+	  
     
     <add name="RecipeShare" connectionString="Data Source=NATHAN-DESKTOP\SQLEXPRESS;Initial Catalog=RecipeShare;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
