--- a/RecipeShare/RecipeShare.csproj
+++ b/RecipeShare/RecipeShare.csproj
@@ -155,6 +155,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Data\Logging.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\IdentityConfig.cs" />
@@ -205,6 +206,10 @@
     <Compile Include="Migrations\201505080351449_add recipegroup relationship.cs" />
     <Compile Include="Migrations\201505080351449_add recipegroup relationship.Designer.cs">
       <DependentUpon>201505080351449_add recipegroup relationship.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201505081429079_recipe group recipes.cs" />
+    <Compile Include="Migrations\201505081429079_recipe group recipes.Designer.cs">
+      <DependentUpon>201505081429079_recipe group recipes.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -280,7 +285,7 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
+    <Folder Include="App_Code\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -319,6 +324,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201505080351449_add recipegroup relationship.resx">
       <DependentUpon>201505080351449_add recipegroup relationship.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201505081429079_recipe group recipes.resx">
+      <DependentUpon>201505081429079_recipe group recipes.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
