--- a/RecipeShare/RecipeShare.csproj
+++ b/RecipeShare/RecipeShare.csproj
@@ -171,6 +171,23 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\EmailController.cs" />
+    <Compile Include="Controllers\ProfileController.cs" />
+    <Compile Include="Migrations\201505100132103_int id.cs" />
+    <Compile Include="Migrations\201505100132103_int id.Designer.cs">
+      <DependentUpon>201505100132103_int id.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201505101729211_add stuff.cs" />
+    <Compile Include="Migrations\201505101729211_add stuff.Designer.cs">
+      <DependentUpon>201505101729211_add stuff.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201505101756158_add stuff1.cs" />
+    <Compile Include="Migrations\201505101756158_add stuff1.Designer.cs">
+      <DependentUpon>201505101756158_add stuff1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201505101810542_stuff4.cs" />
+    <Compile Include="Migrations\201505101810542_stuff4.Designer.cs">
+      <DependentUpon>201505101810542_stuff4.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\Logger.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
@@ -204,7 +221,12 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\font-awesome.css" />
+    <Content Include="Content\font-awesome.min.css" />
+    <Content Include="Content\style.css" />
+    <Content Include="Controllers\User.js" />
     <Content Include="favicon.ico" />
+    <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
@@ -214,6 +236,10 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Content\bootstrap.css.map" />
+    <Content Include="fonts\fontawesome-webfont.woff" />
+    <Content Include="fonts\fontawesome-webfont.ttf" />
+    <Content Include="fonts\fontawesome-webfont.eot" />
+    <Content Include="fonts\FontAwesome.otf" />
     <None Include="Scripts\jquery-2.1.3.intellisense.js" />
     <Content Include="Icon.png" />
     <Content Include="Scripts\bootstrap.js" />
@@ -276,10 +302,25 @@
     <Folder Include="Logs_App\" />
     <Folder Include="Logs_Error\" />
     <Folder Include="Views\Email\" />
+    <Folder Include="Views\Profile\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201505100132103_int id.resx">
+      <DependentUpon>201505100132103_int id.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201505101729211_add stuff.resx">
+      <DependentUpon>201505101729211_add stuff.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201505101756158_add stuff1.resx">
+      <DependentUpon>201505101756158_add stuff1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201505101810542_stuff4.resx">
+      <DependentUpon>201505101810542_stuff4.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
