--- a/RecipeShare/RecipeShare.csproj
+++ b/RecipeShare/RecipeShare.csproj
@@ -295,6 +295,7 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Profile\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Code\" />
@@ -302,7 +303,6 @@
     <Folder Include="Logs_App\" />
     <Folder Include="Logs_Error\" />
     <Folder Include="Views\Email\" />
-    <Folder Include="Views\Profile\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
