--- a/RecipeShare/RecipeShare.csproj
+++ b/RecipeShare/RecipeShare.csproj
@@ -172,6 +172,7 @@
   <ItemGroup>
     <Compile Include="Controllers\EmailController.cs" />
     <Compile Include="Controllers\ProfileController.cs" />
+    <Compile Include="Controllers\RecipeController.cs" />
     <Compile Include="Migrations\201505100132103_int id.cs" />
     <Compile Include="Migrations\201505100132103_int id.Designer.cs">
       <DependentUpon>201505100132103_int id.cs</DependentUpon>
@@ -187,6 +188,14 @@
     <Compile Include="Migrations\201505101810542_stuff4.cs" />
     <Compile Include="Migrations\201505101810542_stuff4.Designer.cs">
       <DependentUpon>201505101810542_stuff4.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201505122317162_foodgroupsee.cs" />
+    <Compile Include="Migrations\201505122317162_foodgroupsee.Designer.cs">
+      <DependentUpon>201505122317162_foodgroupsee.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201505122323119_foodgroupseeds.cs" />
+    <Compile Include="Migrations\201505122323119_foodgroupseeds.Designer.cs">
+      <DependentUpon>201505122323119_foodgroupseeds.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\Logger.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
@@ -224,7 +233,7 @@
     <Content Include="Content\font-awesome.css" />
     <Content Include="Content\font-awesome.min.css" />
     <Content Include="Content\style.css" />
-    <Content Include="Controllers\User.js" />
+    <Content Include="KOScripts\Profile.js" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -242,6 +251,7 @@
     <Content Include="fonts\FontAwesome.otf" />
     <None Include="Scripts\jquery-2.1.3.intellisense.js" />
     <Content Include="Icon.png" />
+    <Content Include="KOScripts\Recipe.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-2.1.3.js" />
@@ -296,12 +306,11 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Profile\Index.cshtml" />
+    <Content Include="Views\Recipe\AddRecipe.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Code\" />
     <Folder Include="App_Data\" />
-    <Folder Include="Logs_App\" />
-    <Folder Include="Logs_Error\" />
     <Folder Include="Views\Email\" />
   </ItemGroup>
   <ItemGroup>
@@ -320,6 +329,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201505101810542_stuff4.resx">
       <DependentUpon>201505101810542_stuff4.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201505122317162_foodgroupsee.resx">
+      <DependentUpon>201505122317162_foodgroupsee.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201505122323119_foodgroupseeds.resx">
+      <DependentUpon>201505122323119_foodgroupseeds.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
