--- a/RecipeShare/packages.config
+++ b/RecipeShare/packages.config
@@ -5,6 +5,7 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="FontAwesome" version="4.2.0" targetFramework="net45" />
   <package id="jQuery" version="2.1.3" targetFramework="net45" />
+  <package id="jquery.datatables" version="1.10.7" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.13.1" targetFramework="net45" />
   <package id="knockoutjs" version="3.3.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" />
