--- a/RecipeShare/packages.config
+++ b/RecipeShare/packages.config
@@ -7,6 +7,7 @@
   <package id="jQuery" version="2.1.3" targetFramework="net45" />
   <package id="jquery.datatables" version="1.10.7" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.13.1" targetFramework="net45" />
+  <package id="Knockout.Validation" version="2.0.3" targetFramework="net45" />
   <package id="knockoutjs" version="3.3.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net45" />
@@ -30,5 +31,6 @@
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.4.2" targetFramework="net45" />
+  <package id="toastr" version="2.1.1" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
