--- a/RecipeShare/RecipeShare.csproj
+++ b/RecipeShare/RecipeShare.csproj
@@ -197,6 +197,14 @@
     <Compile Include="Migrations\201505122323119_foodgroupseeds.Designer.cs">
       <DependentUpon>201505122323119_foodgroupseeds.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201505201918020_remove food stuff.cs" />
+    <Compile Include="Migrations\201505201918020_remove food stuff.Designer.cs">
+      <DependentUpon>201505201918020_remove food stuff.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201505201919284_remove food stuff tables.cs" />
+    <Compile Include="Migrations\201505201919284_remove food stuff tables.Designer.cs">
+      <DependentUpon>201505201919284_remove food stuff tables.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\Logger.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
@@ -222,6 +230,7 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\RecipeModel.cs" />
     <Compile Include="Models\RecipeShare.cs" />
+    <Compile Include="Models\RecipeViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -441,6 +450,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201505122323119_foodgroupseeds.resx">
       <DependentUpon>201505122323119_foodgroupseeds.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201505201918020_remove food stuff.resx">
+      <DependentUpon>201505201918020_remove food stuff.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201505201919284_remove food stuff tables.resx">
+      <DependentUpon>201505201919284_remove food stuff tables.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
