--- a/RecipeShare/RecipeShare.csproj
+++ b/RecipeShare/RecipeShare.csproj
@@ -174,10 +174,6 @@
     <Compile Include="Controllers\GroupController.cs" />
     <Compile Include="Controllers\ProfileController.cs" />
     <Compile Include="Controllers\RecipeController.cs" />
-    <Compile Include="Migrations\201505100132103_int id.cs" />
-    <Compile Include="Migrations\201505100132103_int id.Designer.cs">
-      <DependentUpon>201505100132103_int id.cs</DependentUpon>
-    </Compile>
     <Compile Include="Migrations\201505101729211_add stuff.cs" />
     <Compile Include="Migrations\201505101729211_add stuff.Designer.cs">
       <DependentUpon>201505101729211_add stuff.cs</DependentUpon>
@@ -209,6 +205,10 @@
     <Compile Include="Migrations\201505202205002_update serves to be not int.cs" />
     <Compile Include="Migrations\201505202205002_update serves to be not int.Designer.cs">
       <DependentUpon>201505202205002_update serves to be not int.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201505220001229_fix reverse keys.cs" />
+    <Compile Include="Migrations\201505220001229_fix reverse keys.Designer.cs">
+      <DependentUpon>201505220001229_fix reverse keys.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\GroupViewModel.cs" />
     <Compile Include="Models\Logger.cs" />
@@ -442,9 +442,6 @@
     <None Include="Project_Readme.html" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201505100132103_int id.resx">
-      <DependentUpon>201505100132103_int id.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201505101729211_add stuff.resx">
       <DependentUpon>201505101729211_add stuff.cs</DependentUpon>
     </EmbeddedResource>
@@ -468,6 +465,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201505202205002_update serves to be not int.resx">
       <DependentUpon>201505202205002_update serves to be not int.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201505220001229_fix reverse keys.resx">
+      <DependentUpon>201505220001229_fix reverse keys.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
